src/app.css
/* ... */
:root {
	overflow: hidden;

	background: linear-gradient(155deg, var(--global-background-gradient-base-color), var(--primary-color, var(--ethereum-blue)) 250%) fixed;
	transition:
		--primary-color 1s var(--ease-out-expo),
		--global-background-gradient-base-color 1s var(--ease-out-expo);
}

body {
	overflow: hidden auto;
	height: 100vh;
}


a {
	color: var(--text-color);
	/* text-shadow: 0 1px 1px; */
	transition: 0.2s;
	text-decoration-color: rgba(var(--text-decoration-color), var(--text-decoration-opacity));
}
a:hover {
	--text-decoration-opacity: 0.5;
	opacity: 0.9;
	/* text-shadow: 0 1px 3px; */
}


h1, h2, h3, h4, h5, h6 {
	font-weight: 600;
	line-height: 1.2;
}

h1 {
	font-size: 2em;
}
h5 {
	font-size: 0.95em;
}
h6 {
	font-size: 0.9em;
}

h3.row, h4.row, h5.row, h6.row {
    --padding-inner: 1ch;
}

pre, code {
	font-family: var(--monospace-fonts);
	white-space: pre-wrap;
	font-size: 0.75em;
	user-select: all;
}

output {
	font-family: var(--monospace-fonts);
	white-space: pre-wrap;
	word-break: break-word;
	user-select: all;
}
output[data-type="text"] {
	font-family: inherit;
}

.monospace {
	font-family: var(--monospace-fonts), var(--base-fonts);
	font-size: 0.95em;
	white-space: nowrap;
}


button, ::file-selector-button {
	display: inline-flex;
	align-items: center;
	gap: 0.75ch;

	-webkit-appearance: none;
	background-color: var(--primary-color);
	color: #fff;
	border: none;
	border-radius: 0.33em;
	cursor: pointer;
	outline: none;

	padding: 0.3em 0.7em;
	
	font: inherit;
	font-size: 1.15em;
	font-weight: bold;
	line-height: 1.5;
	text-decoration: none;
	text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);

	--depth: 0.15em;
	--scale: 1;
	--glow: 0;
	box-shadow: 0px var(--depth) rgba(0, 0, 0, 0.25), 0px var(--depth) var(--primary-color), 0 var(--depth) var(--glow) var(--primary-color);
	transform: translateY(calc(-1 * var(--depth))) scale(var(--scale));
	transform-origin: var(--button-transform-origin);
	
	transition: 0.2s;

	cursor: pointer;
	user-select: none;
}
button:is(:hover, :focus), input:is(:hover, :focus)::file-selector-button {
	--scale: 1.015;
}
button:focus, input:focus::file-selector-button {
	--glow: 5px;
}
button:active, input:active::file-selector-button {
	--depth: 0;
}
button.medium, input.medium::file-selector-button {
	font-size: 0.95em;
}
button.small, input.small::file-selector-button {
	font-size: 0.7em;
}
button.destructive {
	--primary-color: hsl(17deg 69% 43%);
}
button.cancel {
	--primary-color: #777;
}
button.add {
	cursor: copy;
}

a:has(button) {
	text-decoration: none;
}


:-placeholder {
	opacity: 0.5;
}

input, select, textarea {
	border: none;
	font: inherit;
	max-width: 100%;
}
input:not([type="file"]), textarea {
	/* background-color: rgba(var(--rgb-light-dark-inverse), 0.975) */
	background-color: rgba(255, 255, 255, 0.975);
	border-radius: 0.5rem;
	padding: 0.3em 0.7em;
	flex-basis: 20rem;
}
/* input.is-valid {
	border: 2px solid green;
} */
input[type="number"] {
	font-family: var(--monospace-fonts);
}

input[type="checkbox"] {
	width: 1.2em;
	height: 1.2em;
	transform: translateY(0.2em);
	/* display: inline-flex;
	align-items: center; */
	flex-basis: auto;
}

input[type="file"] {
	/* overflow: visible; */
	margin: -1rem;
	padding: 1rem;
}

label {
	cursor: pointer;
}

label input:is([type="checkbox"], [type="radio"]) {
	display: none;
}
label input:is([type="checkbox"], [type="radio"]) ~ span {
	background-color: rgba(255, 255, 255, calc(0.2 + var(--is-light) * 0.8));
	padding: 0.2em 0.4em;
	border-radius: 0.25em;
	transition: 0.15s;
	cursor: pointer;
	display: inline-flex;
	align-items: center;
	gap: 0.3em;
}
label input:is([type="checkbox"], [type="radio"]):checked ~ span {
	/* box-shadow: 0 0 0 1px rgba(var(--rgb-light-dark-inverse), 0.33); */
	box-shadow: 0 0 0 1.5px var(--primary-color);
	scale: 1.025;
}
label input:is([type="checkbox"], [type="radio"]):not(:checked) ~ span {
	opacity: 0.66;
}
label:hover input:is([type="checkbox"], [type="radio"]) ~ span {
	scale: 1.02;
}
label:active input:is([type="checkbox"], [type="radio"]) ~ span {
	scale: 0.99;
}
label:hover input:is([type="checkbox"], [type="radio"]):not(:checked) ~ span {
	opacity: 0.66;
}
label input:is([type="checkbox"], [type="radio"]) ~ span:before {
	font-size: 1.4em;
	line-height: 0;
	speak: none;
	transition: 0.1s ease-out;
}
label input:is([type="checkbox"]):not(:checked) ~ span:before {
	content: "⃞";
	opacity: 0.5;
}
label:active input:is([type="checkbox"]):not(:checked) ~ span:before {
	/* content: "+⃞"; */
	animation: CheckboxAdd 0s 0.075s forwards;
}
@keyframes CheckboxAdd {
	to {
		content: "+⃞";
	}
}
label input[type="checkbox"]:checked ~ span:before {
	content: "✓⃞";
}
/* label:not(:focus):not(:focus-within):hover input:is([type="checkbox"]):checked ~ span:before {
	animation: CheckboxDelete 0s 0.33s forwards;
}*/
label:active input[type="checkbox"]:checked ~ span:before {
	/* content: "☒"; */
	animation: CheckboxDelete 0s 0.075s forwards;
}
@keyframes CheckboxDelete {
	to {
		content: "☒";
	}
}
label input:is([type="radio"]):not(:checked) ~ span:before {
	content: "⃝";
}
label input:is([type="radio"]):checked ~ span:before {
	content: "✓⃝";
}

h1 input, h2 input {
	font-size: 0.7em;
	animation: From 0.3s;
}
@keyframes From {
	from {
		padding: 0;
		background: inherit;
		color: inherit;
		font-size: inherit;
	}
}

select {
	border-radius: 0.5rem;
	padding: 0.25em 0.4em;
}
select:not(:focus) {
	cursor: context-menu;
}

section {
	display: grid;
	gap: var(--padding-inner);
	grid-template-columns: 100%;
}


:disabled,
form:invalid input[type="submit"],
form:invalid button[type="submit"],
.placeholder {
	opacity: 0.33;
	cursor: not-allowed !important;
	touch-action: none;
}


:invalid {
	/* border: red 2px solid; */
	outline-color: red;
}


mark, .mark {
	background: none;
	color: currentColor;
	text-shadow: 1px 1px 0.25rem var(--primary-color);
	text-shadow: 0 0.5px 0.2em var(--primary-color);
	/* text-outline: 1px 2px var(--primary-color); */
}
/* ... */

